src/objects/Buying_Influence__c.object
<CustomObject>
    <description>A list of buying influences associated with an opportunity</description>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>R00N30000000hxWCEAY</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MH_Degree__c</fullName>
        <label>Degree</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MH_Evidence__c</fullName>
        <label>Evidence</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MH_Mode__c</fullName>
        <label>Mode</label>
        <picklist>
            <picklistValues>
                <fullName>Growth</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Even Keel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trouble</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Over Confident</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MH_Rating__c</fullName>
        <label>Rating</label>
        <picklist>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>-1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>-2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>-3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>-4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>-5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MH_Result__c</fullName>
        <label>KeyWins</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Buying Influences</relationshipLabel>
        <relationshipName>R00N30000000hxVREAY</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>mh_Role__c</fullName>
        <description>Miller Heiman SAM Buying Influence custom object</description>
        <label>Role</label>
        <picklist>
            <picklistValues>
                <fullName>Economic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>User</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coach</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Buying Influence</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Buying Influence ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Buying Influences</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>